# DocMind

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_document_id_to_conversations.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  documents.py  health.py  ingestion.py  router.py  search.py  workspaces.py
backend/app/core/: exceptions.py  rate_limiter.py  security.py
backend/app/infrastructure/: database.py  llm_client.py  qdrant_client.py  redis_client.py  s3_client.py
backend/app/models/: conversation.py  document.py  user.py  workspace.py
backend/app/repositories/: conversation.py  document.py  user.py  workspace.py
backend/app/schemas/: auth.py  chat.py  document.py  workspace.py
backend/app/services/: auth.py  chat.py  chunking.py  document.py  embedding.py  extraction.py  hybrid_retriever.py  reranker.py  semantic_cache.py  vector_store.py
backend/app/tasks/: __init__.py  ingestion.py  summarization.py
frontend/: .env.example  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/workspaces/: page.tsx
frontend/src/app/(dashboard)/workspaces/[id]/: page.tsx
frontend/src/app/(dashboard)/workspaces/[id]/analytics/: page.tsx
frontend/src/app/(dashboard)/workspaces/[id]/chat/: page.tsx
frontend/src/app/(dashboard)/workspaces/[id]/search/: page.tsx
frontend/src/components/chat/: citation-panel.tsx  markdown-renderer.tsx  typing-indicator.tsx
frontend/src/components/documents/: processing-pipeline.tsx
frontend/src/components/landing/: landing-page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  progress.tsx  skeleton.tsx  tooltip.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: auth.ts  chat.ts
